Added field in results for checking whether agents can initially reach their goal position.